--- a/client/public/javascripts/directives/newPostModal/newPostModal.html
+++ b/client/public/javascripts/directives/newPostModal/newPostModal.html
@@ -1,37 +1,22 @@
+
 <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        <h4 class="modal-title" id="myModalLabel">New Post</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form ng-show="view.createPost" class="form" name="addPost">
-                            <div class="form-group" ng-class="{'has-error': addPost.title.$invalid, 'has-success': addPost.title.$valid}">
-                                <label for="title">Title</label>
-                                <input name="title" type="text" class="form-control" ng-minlength="4" ng-model="newPost.title">
-                            </div>
-                            <div class="form-group">
-                                <label for="author">Author</label>
-                                <input name="author" type="text" class="form-control" ng-model="newPost.author">
-                            </div>
-                            <div class="form-group">
-                                <label for="image">Image URL</label>
-                                <input name="image" type="text" class="form-control" ng-model="newPost.image">
-                            </div>
-                            <div class="form-group">
-                                <label for="description">Description</label>
-                                <input name="description" type="text" class="form-control" ng-model="newPost.description">
-                            </div>
-                            <button data-dismiss="modal" type="submit" class="btn btn-default" ng-click="post()">Submit Post</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+    <form class="form" name="addPost" ng-submit="post()" ng-show="view.createPost">
+        <div class="form-group" ng-class="{'has-error': addPost.title.$invalid, 'has-success': addPost.title.$valid}">
+            <label for="title">Title</label>
+            <input name="title" type="text" class="form-control" ng-minlength="4" ng-model="newPost.title">
         </div>
-    </div>
+        <div class="form-group">
+            <label for="author">Author</label>
+            <input name="author" type="text" class="form-control" ng-model="newPost.author">
+        </div>
+        <div class="form-group">
+            <label for="image">Image URL</label>
+            <input name="image" type="text" class="form-control" ng-model="newPost.image">
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <input name="description" type="text" class="form-control" ng-model="newPost.description">
+        </div>
+        <button type="submit" class="btn btn-default">Submit Post</button>
+    </form>
 </div>
