so much cool stuff

--- a/client/public/javascripts/directives/header/header.html
+++ b/client/public/javascripts/directives/header/header.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a data-toggle="modal" data-target="#myModal" href="" ng-click="showPost()">
+                    <a data-toggle="modal" data-target="#myModal" href="" ng-click="showPostForm()">
                         <i class="glyphicon glyphicon-plus"></i> Submit Post</a>
                 </li>
             </ul>
