users created in database

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,9 @@
     <script type="text/javascript" src="javascripts/directives/newPostModal/newPostModal.js"></script>
     <script type="text/javascript" src="javascripts/directives/post/post.js"></script>
     <script type="text/javascript" src="javascripts/services/postService.js"></script>
+    <script type="text/javascript" src="javascripts/services/authService.js"></script>
     <script type="text/javascript" src="javascripts/controllers/mainController.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/signupController.js"></script>
     <script type="text/javascript" src="javascripts/router.js"></script>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Amaranth' type='text/css'>
 </head>
