--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="javascripts/router.js"></script>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Amaranth' type='text/css'>
 </head>
-<body ng-controller="mainController">
+<body>
 <rdt-header></rdt-header>
 <main class="container">
     <ui-view></ui-view>
