--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="javascripts/directives/header/header.js"></script>
     <script type="text/javascript" src="javascripts/directives/newPostModal/newPostModal.js"></script>
     <script type="text/javascript" src="javascripts/directives/post/post.js"></script>
+    <script type="text/javascript" src="javascripts/directives/signup/signup.js"></script>
     <script type="text/javascript" src="javascripts/services/postService.js"></script>
     <script type="text/javascript" src="javascripts/services/authService.js"></script>
     <script type="text/javascript" src="javascripts/controllers/mainController.js"></script>
