--- a/client/public/javascripts/directives/header/header.html
+++ b/client/public/javascripts/directives/header/header.html
@@ -37,7 +37,7 @@
                     </ul>
                 </li>
             </ul>
-            <a href="/signup" class="push-right">Signup</a>{{user.username}}
+            <a href="/signup" class="push-right">Signup</a> | {{user.username}}
         </div>
     </div>
 </nav>
