--- a/client/public/javascripts/directives/header/header.html
+++ b/client/public/javascripts/directives/header/header.html
@@ -38,6 +38,7 @@
                 </li>
             </ul>
             <a href="/signup" class="push-right">Signup</a> | {{user.name}}
+            <a href="/login" class="push-right">Login</a>
         </div>
     </div>
 </nav>
